fix(execution): Correction in execution (#14)
* style(repositories.scss): fixing item overlap

* fix(app/services/github/repo.rb): data return correction

* refactor(app/views/repositories/index.html.haml): changing the component declaration

--- a/app/assets/stylesheets/repositories.scss
+++ b/app/assets/stylesheets/repositories.scss
@@ -43,6 +43,10 @@
 
 .mt-65-negative {
   margin-top: -65px;
+  
+  .col-11 {
+    z-index: 2 !important;
+  }
 }
 
 .matte-container {
